content/manual/versions/v4.2/source/includes/list-mongodb-enterprise-packages.rst
MongoDB Enterprise Edition is available from its own dedicated
repository, and contains the following officially-supported packages:

.. container::

   .. list-table::
     :header-rows: 1
     :widths: 35 65

     * - Package Name
       - Description

     * - ``{+package-name-enterprise+}``
       - A ``metapackage`` that automatically installs the component
         packages listed below.

     * - ``{+package-name-enterprise+}-server``
       - Contains the :binary:`~bin.mongod` daemon and associated
         configuration and init scripts.

     * - ``{+package-name-enterprise+}-mongos``
       - Contains the :binary:`~bin.mongos` daemon.

     * - ``{+package-name-enterprise+}-shell``
       - Contains the :binary:`~bin.mongo` shell.

     * - ``{+package-name-enterprise+}-cryptd``
       - Contains the :ref:`mongocryptd <csfle-encryption-components>`
         binary

     * - ``{+package-name-enterprise+}-tools``
       - Contains the following MongoDB tools:

         - :binary:`~bin.mongodump`
         - :binary:`~bin.mongorestore`
         - :binary:`~bin.bsondump`
         - :binary:`~bin.mongoimport`
         - :binary:`~bin.mongoexport`
         - :binary:`~bin.mongostat`
         - :binary:`~bin.mongotop`
         - :binary:`~bin.mongofiles`
         - :binary:`~bin.mongoldap`
         - :ref:`install-compass` script
         - ``mongodecrypt`` binary
